--- a/hypothesis_testing/testing_workshop.ipynb
+++ b/hypothesis_testing/testing_workshop.ipynb
@@ -21194,7 +21194,7 @@
    "source": [
     "**Assumptions**\n",
     "- Independence: The observations within each group are independent of each other. This means that the values in one group are not influenced by the values in the other group.\n",
-    "- Normality: The population distributions of both groups are normal. The assumption of normality can be checked by examining the distribution of scores in each group using histograms or normal probability plots.\n",
+    "- Normality: The population distributions of both groups are normal. The assumption of normality can be checked by examining the distribution of values in each group using histograms or QQ plots, or some other normality tests, i.e. Shapiro-Wilk test.\n",
     "- Homogeneity of variances: The variance of values in each group is equal. This assumption can be tested using a statistical test such as Levene's test."
    ]
   },
@@ -21221,7 +21221,10 @@
    "id": "ba05c9e8-e4ae-43a0-ad27-5c77d822c373",
    "metadata": {},
    "source": [
-    "Use shapiro-wilk test to test Normality"
+    "Use shapiro-wilk test to test Normality\n",
+    "\n",
+    "H0: Data is normally distributed  \n",
+    "Ha: Data is not normally distributed"
    ]
   },
   {
@@ -21354,7 +21357,7 @@
    "id": "8f4b62e4-49d3-4027-8336-cdb97c32a70e",
    "metadata": {},
    "source": [
-    "We conducted a two-sample unpaired t-test to compare the mean height of male and female participants. The sample consisted of 5000 male participants with a mean weight of 69.02 inches (SD = 2.86 inches) and 5000 female participants with a mean weight of 63.70 inches (SD = 2.70 inches).\n",
+    "We conducted a two-sample unpaired Welch's t-test to compare the mean height of male and female participants. The sample consisted of 5000 male participants with a mean height of 69.02 inches (SD = 2.86 inches) and 5000 female participants with a mean height of 63.70 inches (SD = 2.70 inches).\n",
     "\n",
     "Given the test result (t = -95.60, p = .00), we have obtained statistically significant evidence to reject H0 within the significance level of .05, suggesting that there is a significant difference in height between male and female in population, with males being significantly higher than females. "
    ]
