Add seaborn plots; export env

--- a/data_viz/01-matplotlib-examples.ipynb
+++ b/data_viz/01-matplotlib-examples.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Matplotlib Examples\n",
     "\n",
-    "This notebook is used for the creation of matplotlib examples used in the ADSL Data Viz workshop. Feel free to refer to these or modofy the code if it helps with learning"
+    "This notebook is used for the creation of matplotlib examples used in the ADSL Data Viz workshop. Feel free to refer to these or modify the code if it helps with learning"
    ]
   },
   {
