Update plots; add new figures

--- a/data_viz/00-data-viz-basics.ipynb
+++ b/data_viz/00-data-viz-basics.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Data Viz Basics\n",
     "\n",
-    "This notebook is used for generating examples of data viz basics"
+    "This notebook is used for generating examples of data viz basics in Plotly. For examples in other libaries, check out those notebooks."
    ]
   },
   {
@@ -79,6 +79,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bar Plots\n",
+    "\n",
+    "Bar plots are excellent ways to compare either count or single values from different groups. They can be further faceted to do hierarchies of groups or different combinations of factors. What they _aren't_ great for is showing changes over time, where a line plot might be more effective, or when comparing discrete data that isn't clearly categorical.\n",
+    "\n",
+    "Additionally, bar plots are one of the most basic plots you can make from data, but also one that is often misunderstood and used (or abused) improperly. Because of the general public's familiarity with bar plots, it's very easy to overlook bias that has been intentionally or unintentionally added to a bar plot. The biggest area to look at is the Y-axis, where scaling the range can magnify or obscure real differences between different groups."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.bar(df[(df['country'].isin(g7)) & (df['year']==2002)], x='country', y='pop', color='country', \n",
+    "       title='Population of G7 countries in 2002', labels={'pop':'Population', 'country':'Country'},\n",
+    "       width=500, height=400)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Histograms\n",
+    "\n",
+    "Histograms are excellent ways to initially explore the data and get an idea of the underlying distributions. By looking at the shape of the histogram, you can get an appreciation for the range of values, maximum and minimums, as well as the latent patterns that might underly how it was created.\n",
+    "\n",
+    "When doing EDA, histograms are an almost requirement, at least initially, and many libraries in Python make it extremely easy to quickly generate histograms from data. Depending on the type of data and how it's distrubited, it may be necessary to change the function of the scale to get a more reasonable visualization, especially with monetary or population data. For example, the first of the below visualizations has a linear scale for count on the Y-axis, while the second has a logarithmic. Note that we are switching the Y-axis (count) to a log scale, where often you'll have to make the transformation to the data you're investigating, rather than the count.\n",
+    "\n",
+    "The interactivity of Plotly also excels here, as you can hover over the bins to see the actual values in each bar."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.histogram(df[df['year']==1997], 'pop', title='Histogram of country populations in 1997 (linear Y scale)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.histogram(df[df['year']==1997], 'pop', title='Histogram of country populations in 1997 (log Y scale)', \n",
+    "             log_y=True)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -102,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
