--- a/data_viz/02-seaborn-examples.ipynb
+++ b/data_viz/02-seaborn-examples.ipynb
@@ -15,7 +15,9 @@
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import warnings\n",
+    "warnings.simplefilter(action='ignore', category=FutureWarning)"
    ]
   },
   {
@@ -45,11 +47,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axes = plt.subplots(3,1)\n",
-    "islands = df['island'].unique()\n",
-    "for i in range(len(islands)):\n",
-    "    sns.barplot(x='species', y='body_mass_g', hue='sex', data=df[df['island']==islands[i]], errorbar='ci', ax=axes[i])\n",
-    "g"
+    "g = sns.catplot(x=\"species\", y=\"body_mass_g\", hue=\"sex\", col=\"island\",\n",
+    "               data=df, kind=\"bar\", aspect=0.5, errorbar=('ci',95))\n",
+    "g.set_axis_labels(\"Species\", \"Body mass (g)\")\n",
+    "g.set_titles(\"{col_name} {col_var}\")\n",
+    "g.fig.suptitle('Body mass of different species of penguin on different islands')\n",
+    "plt.tight_layout()"
    ]
   },
   {
@@ -58,7 +61,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.__version__"
+    "# Histograms\n",
+    "h = sns.histplot(df, x='flipper_length_mm', hue='species', element='step')\n",
+    "h.set(xlabel='Flipper Length (mm)', ylabel='Count', title='Penguin flipper length distribution by species')\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -85,7 +92,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
