--- a/data_viz/00-data-viz-basics.ipynb
+++ b/data_viz/00-data-viz-basics.ipynb
@@ -133,6 +133,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Box Plots\n",
+    "\n",
+    "Box plots are another great way to visualize the distribution within a given variable (or compare multiple variabkes). At a glance, you can also get an idea of the basics descriptives, such as min/max, median/mean, outliers, etc. Exactly how the whiskers and outliers are calculated is usually configurable, as is whether the mean or median (or both) are prominently displayed. Note the use of the log scale on the X-axis below.\n",
+    "\n",
+    "If you're more interested in the data surrounding the median, a violin plot is a similar way to plot the same information, but with a higher sensitivity to distributions around the middle."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.box(df[df['year']==1972], 'gdpPercap', color='continent', title='Boxplot of country GDP per capita in 1972', orientation='h', log_x=True,\n",
+    "       labels={'gdpPercap':'GDP per capita', 'continent':'Continent'})"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
