--- a/data_viz/01-matplotlib-examples.ipynb
+++ b/data_viz/01-matplotlib-examples.ipynb
@@ -17,7 +17,11 @@
    "source": [
     "# import libraries\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import requests\n",
+    "from zipfile import ZipFile\n",
+    "from io import BytesIO"
    ]
   },
   {
@@ -80,6 +84,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Box plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = requests.get(\"https://archive.ics.uci.edu/static/public/53/iris.zip\")\n",
+    "files = ZipFile(BytesIO(r.content))\n",
+    "names = [\"sepal_length\", \"sepal_width\", \"petal_length\", \"petal_width\", \"class\"]\n",
+    "iris = pd.read_csv(files.open(\"iris.data\"), names=names)\n",
+    "iris.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.boxplot([iris[\"sepal_length\"], iris[\"sepal_width\"], iris[\"petal_length\"], iris[\"petal_width\"]])\n",
+    "plt.ylabel(\"Length / width (cm)\")\n",
+    "plt.xticks([1, 2, 3, 4], [\"Sepal length\", \"Sepal width\", \"Petal length\", \"Petal width\"])\n",
+    "plt.title('Distribution of petal features')\n",
+    "\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -103,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.13"
   },
   "orig_nbformat": 4
  },
