--- a/data_viz/00-data-viz-basics.ipynb
+++ b/data_viz/00-data-viz-basics.ipynb
@@ -150,7 +150,196 @@
    "outputs": [],
    "source": [
     "px.box(df[df['year']==1972], 'gdpPercap', color='continent', title='Boxplot of country GDP per capita in 1972', orientation='h', log_x=True,\n",
-    "       labels={'gdpPercap':'GDP per capita', 'continent':'Continent'})"
+    "       labels={'gdpPercap':'GDP per capita', 'continent':'Continent'}, hover_data=['country'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Basic tenets of plotting\n",
+    "\n",
+    "Here are a few 'rules of thumb' to consider when building plots:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Plots can typically only display 2-4 features at a time\n",
+    "\n",
+    "2-4 features (or dimensions) is the ideal range for plots. More than 4 dimensions and the visualizations get quite crowded, and on the other end, a graph of a single feature (with no measure of it) isn't really a visualization."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = px.data.gapminder()\n",
+    "px.scatter(df, x='gdpPercap', y='lifeExp', color='continent', size='pop', size_max=60, log_x=True,\n",
+    "           title='Plot of life expectancy vs GDP per capita, alongside continent membership and population size',\n",
+    "           labels={'gdpPercap':'GDP per capita (USD)', 'lifeExp':'Life Expectancy (years)', 'pop':'Population', 'continent':'Continent'},\n",
+    "           hover_name='country', width=600, height=600)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How to improve a plot\n",
+    "\n",
+    "Here we'll go various iterations of the same data to show how different elements can be added or modified to improve readability.\n",
+    "\n",
+    "For this, we'll return to the Gapminder data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.express as px\n",
+    "df = px.data.gapminder()\n",
+    "df.sample(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Basic plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g7 = ['Canada', 'United States', 'United Kingdom', 'Germany', 'France', 'Italy', 'Japan']\n",
+    "g = px.line(df[df['country'].isin(g7)], x='year', y='gdpPercap',\n",
+    "            height=400, width=1000)\n",
+    "g"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Adding title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g2 = px.line(df[df['country'].isin(g7)], x='year', y='gdpPercap', title='GDP per capita of G7 countries over time', color='country',\n",
+    "             height=400, width=1000)\n",
+    "g2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Improving labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g3 = px.line(df[df['country'].isin(g7)], x='year', y='gdpPercap', title='GDP per capita of G7 countries over time', color='country',\n",
+    "             height=400, width=1000, labels={'year':'Year', 'gdpPercap':'GDP per capita (USD)', 'country':'Country'})\n",
+    "g3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Adding annotations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g4 = px.line(df[df['country'].isin(g7)], x='year', y='gdpPercap', title='GDP per capita of G7 countries over time', color='country',\n",
+    "             height=400, width=1000, labels={'year':'Year', 'gdpPercap':'GDP per capita (USD)', 'country':'Country'})\n",
+    "g4.add_annotation(x=1997, y=6000, text='*Inflation-adjusted to 2007', showarrow=False)\n",
+    "g4\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Styling units"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g5 = px.line(df[df['country'].isin(g7)], x='year', y='gdpPercap', title='GDP per capita of G7 countries over time', color='country',\n",
+    "             height=400, width=1000, labels={'year':'Year', 'gdpPercap':'GDP per capita (USD)', 'country':'Country'})\n",
+    "g5.add_annotation(x=1997, y=6000, text='*Inflation-adjusted to 2007', showarrow=False).update_layout(yaxis_tickprefix = '$')\n",
+    "g5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Customizing colour"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colors = ['rgb(0,0,0)',\n",
+    "          'rgb(230,159,0)',\n",
+    "          'rgb(86,180,233)',\n",
+    "          'rgb(0,158,115)',\n",
+    "          'rgb(240,228,66)',\n",
+    "          'rgb(0,114,178)',\n",
+    "          'rgb(213,94,0)',\n",
+    "          'rgb(204,121,167)']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g6 = px.line(df[df['country'].isin(g7)], x='year', y='gdpPercap', title='GDP per capita of G7 countries over time', color='country',\n",
+    "             height=400, width=1000, labels={'year':'Year', 'gdpPercap':'GDP per capita (USD)', 'country':'Country'},\n",
+    "             color_discrete_sequence=colors)\n",
+    "g6.add_annotation(x=1997, y=6000, text='*Inflation-adjusted to 2007', showarrow=False).update_layout(yaxis_tickprefix = '$')\n",
+    "g6"
    ]
   },
   {
