--- a/data_viz/01-matplotlib-examples.ipynb
+++ b/data_viz/01-matplotlib-examples.ipynb
@@ -119,6 +119,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multiple dimensions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bb = pd.read_csv('https://github.com/callysto/data-files/raw/main/data-viz-of-the-week/baseball/data/darvish-pitches.csv')\n",
+    "bb.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
